# c780_carel_cloud_engine_binary

./: Readme.txt
Documents/: C780_Barashi.ppt  C780_Roadmap_Tentative.xlsx
Homologation/: Readme.txt
Production_Binaries/: GME_FW_Version.xlsx
Projects/: CCE_Doxyfile_PrJ  GME_ESP32_Compiling_Instructions.txt  Readme.txt  get_esp-idf.sh  go_doxygen.bat  sdkconfig.debug  sdkconfig.release
Projects/GME_Binary/main/: CAREL_GLOBAL_DEF.h  CBOR_CAREL.c  CBOR_CAREL.h  CMakeLists.txt  File_System_CAREL.c  File_System_CAREL.h  File_System_IS.c  File_System_IS.h  GSM_Miscellaneous_IS.c  GSM_Miscellaneous_IS.h  IO_Port_IS.c  IO_Port_IS.h  Kconfig.projbuild  Led_Manager_IS.c  Led_Manager_IS.h  MQTT_Interface_CAREL.c  MQTT_Interface_CAREL.h  MQTT_Interface_IS.c  MQTT_Interface_IS.h  Miscellaneous_IS.h  RTC_IS.c  RTC_IS.h  Readme.md  SoftWDT.c  SoftWDT.h  WebDebug.c  WebDebug.h  binary_model.c  binary_model.h  cmd_custom.c  cmd_custom.h  common.h  component.mk  data_types_CAREL.h  data_types_IS.h  file_system.c  file_system.h  gme_config.h  gme_types.h  heatshrink_iface.c.save  (+63 more)
Test/: C780_Binary_Library_Test_Plan.xlsx  C780_Binary_Library_Test_Plan_20200804_chiebao.xlsx  C780_Binary_Library_Test_Plan_20200826_cellini.xlsx  C780_Binary_Library_Test_Plan_20200903.xlsx  C780_Binary_Library_Test_Plan_20200915.xlsx  C780_Binary_Library_Test_Plan_20201105.xlsx  C780_Binary_Library_Test_Plan_20201112.xlsx  C780_Binary_Library_Test_Plan_all.xlsx  C780_DF09_FW_Code_Inspection_Plan - Copia.xlsx  C780_Incoming_product_checklist.xlsx  C780_PT15_FW_Code_Inspection_Plan.xlsx  Readme.txt  (+1 more)
(+1265 files in other folders)
